--- a/src/main/resources/templates/content/user/main.html
+++ b/src/main/resources/templates/content/user/main.html
@@ -4,6 +4,7 @@
 <head>
     <title>My Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href=".static/css/App.css">
 </head>
 <body>
 
