--- a/src/main/resources/templates/sidebar/sidebar.html
+++ b/src/main/resources/templates/sidebar/sidebar.html
@@ -1,11 +1,11 @@
-<nav id="sidebar" class="col-md-3 col-lg-2 d-md-block bg-light sidebar" th:fragment="sidebarFragment">
+<nav id="sidebar" class="col-md-3 col-lg-2 d-md-block sidebar" th:fragment="sidebarFragment" style="background-color: #E2ECE2">
     <div class="position-sticky">
         <ul class="nav flex-column">
             <li class="nav-item">
-                <a class="nav-link active" href="#">Link 1</a>
+                <a class="nav-link active" href="#">나눔하기</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Link 2</a>
+                <a class="nav-link" href="#">마이페이지</a>
             </li>
         </ul>
     </div>
