--- a/src/main/resources/templates/sidebar/sidebar.html
+++ b/src/main/resources/templates/sidebar/sidebar.html
@@ -2,10 +2,10 @@
     <div class="position-sticky">
         <ul class="nav flex-column">
             <li class="nav-item">
-                <a class="nav-link active" href="#">나눔하기</a>
+                <a class="nav-link active" href="#" style="color: black; text-align: center; font-weight: bold;">나눔하기</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">마이페이지</a>
+                <a class="nav-link" href="#" style="color: black; text-align: center; font-weight: bold;">마이페이지</a>
             </li>
         </ul>
     </div>
