--- a/src/main/resources/templates/footer/footer.html
+++ b/src/main/resources/templates/footer/footer.html
@@ -1,3 +1,4 @@
-<footer th:fragment="footerFragment">
-    <p>Copyright © Team Solar Power</p>
-</footer>
+<footer class="footer bg-light fixed-bottom py-1" th:fragment="footerFragment">
+ <div class="footer-container container text-center">
+    <span>Copyright © Team Solar Power. All rights reserved.</span>
+ </div>
