--- a/src/main/resources/templates/sidebar/sidebar.html
+++ b/src/main/resources/templates/sidebar/sidebar.html
@@ -1,4 +1,13 @@
-<nav id="sidebar" class="col-md-3 col-lg-2 d-md-block sidebar" th:fragment="sidebarFragment" style="background-color: #E2ECE2">
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="/static/css/App.css">
+</head>
+
+<body>
+
+<nav id="sidebar" class="col-md-3 col-lg-2 d-md-block sidebar" th:fragment="sidebarFragment" style="background-color: #E2ECE2; position: fixed; height: 100%">
     <div class="position-sticky">
         <ul class="nav flex-column">
             <li class="nav-item">
@@ -10,3 +19,6 @@
         </ul>
     </div>
 </nav>
+
+</body>
+</html>
