--- a/src/main/resources/templates/sidebar/sidebar.html
+++ b/src/main/resources/templates/sidebar/sidebar.html
@@ -7,14 +7,14 @@
 
 <body>
 
-<nav id="sidebar" class="col-md-3 col-lg-2 d-md-block sidebar" th:fragment="sidebarFragment" style="background-color: #E2ECE2; position: fixed; height: 100%">
+<nav id="sidebar" class="col-md-3 col-lg-2 d-md-block sidebar" th:fragment="sidebarFragment" style="background-color: #E2ECE2; position: fixed; height: 100%; width: 150px;">
     <div class="position-sticky">
         <ul class="nav flex-column">
             <li class="nav-item">
-                <a class="nav-link active" href="#" style="color: black; text-align: center; font-weight: bold;">나눔하기</a>
+                <a class="nav-link active" href="#" style="color: black; font-weight: bold;">나눔하기</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#" style="color: black; text-align: center; font-weight: bold;">마이페이지</a>
+                <a class="nav-link" href="#" style="color: black; font-weight: bold;">마이페이지</a>
             </li>
         </ul>
     </div>
