--- a/src/main/resources/templates/sidebar/adminsidebar.html
+++ b/src/main/resources/templates/sidebar/adminsidebar.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="/static/css/App.css">
 </head>
+
 <body>
-$END$
+
+<nav id="sidebar" class="col-md-3 col-lg-2 d-md-block sidebar" th:fragment="sidebarFragment" style="background-color: #E2ECE2; position: fixed; height: 100%; width: 150px;">
+    <div class="position-sticky">
+        <ul class="nav flex-column">
+            <li class="nav-item">
+                <a class="nav-link active" href="#" style="color: black; font-weight: bold;">유저목록</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" style="color: black; font-weight: bold;">나눔글 관리</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
 </body>
 </html>
