ignore & feature: book search

--- a/src/main/resources/templates/footer/footer.html
+++ b/src/main/resources/templates/footer/footer.html
@@ -2,3 +2,4 @@
  <div class="footer-container container text-center">
     <span>Copyright © Team Solar Power. All rights reserved.</span>
  </div>
+</footer>
