--- a/src/main/resources/templates/sidebar/sidebar.html
+++ b/src/main/resources/templates/sidebar/sidebar.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<nav id="sidebar" class="col-md-3 col-lg-2 d-md-block sidebar" th:fragment="sidebarFragment" style="background-color: #E2ECE2; position: fixed; height: 100%; width: 150px;">
+<nav id="sidebar" class="col-md-3 col-lg-2 bg-light d-md-block sidebar" th:fragment="sidebarFragment" style="position: fixed; height: 100%; width: 150px;">
     <div class="position-sticky">
         <ul class="nav flex-column">
             <li class="nav-item">
