--- a/src/main/resources/templates/sidebar/adminSidebar.html
+++ b/src/main/resources/templates/sidebar/adminSidebar.html
@@ -11,10 +11,10 @@
     <div class="position-sticky">
         <ul class="nav flex-column">
             <li class="nav-item">
-                <a class="nav-link active" href="#" style="color: black; font-weight: bold;">유저목록</a>
+                <a class="nav-link active" href="/admin/" style="color: black; font-weight: bold;">유저목록</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#" style="color: black; font-weight: bold;">나눔글 관리</a>
+                <a class="nav-link" href="/admin/board" style="color: black; font-weight: bold;">나눔글 관리</a>
             </li>
         </ul>
     </div>
