--- a/src/main/resources/templates/sidebar/sidebar.html
+++ b/src/main/resources/templates/sidebar/sidebar.html
@@ -15,6 +15,9 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#" style="color: black; font-weight: bold;">마이페이지</a>
+                <a class="nav-link" href="/mypage/myInfor" style="color: black; font-weight: bold;">내정보</a>
+                <a class="nav-link" href="/mypage/giveList" style="color: black; font-weight: bold;">Give</a>
+                <a class="nav-link" href="/mypage/takeList" style="color: black; font-weight: bold;">Take</a>
             </li>
         </ul>
     </div>
