--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,40 +4,41 @@
   <meta charset="UTF-8">
   <title>로그인</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-
-  <style>
-    .gradient-custom {
-      background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
-    }
-  </style>
 </head>
-<body class="gradient-custom">
+
+<body class="gradient-custom" style="background-color: #E2ECE2;">
 <section class="d-flex vh-100">
   <div class="container-fluid row justify-content-center align-content-center">
     <div class="card bg-dark" style="border-radius: 1rem;">
       <div class="card-body p-5 text-center">
         <h2 class="text-white">LOGIN</h2>
-        <p class="text-white-50 mt-2 mb-5">서비스를 사용하려면 로그인을 해주세요!</p>
-
+        <p class="text-white-50 mt-2 mb-3">서비스를 사용하려면 로그인을 해주세요</p>
         <div class = "mb-2">
           <form action="/login" method="POST">
             <input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}" />
             <div class="mb-3">
-              <label class="form-label text-white">Email address</label>
+              <label class="form-label text-white">Email</label>
               <input type="email" class="form-control" name="username">
             </div>
             <div class="mb-3">
               <label class="form-label text-white">Password</label>
               <input type="password" class="form-control" name="password">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-secondary">로그인</button>
           </form>
-
-          <button type="button" class="btn btn-secondary mt-3" onclick="location.href='/signup'">회원가입</button>
+          <div class="d-flex justify-content-between mt-3">
+            <a href="/user/signup" class="text-white" style="text-decoration: underline;">회원가입</a>
+            <a href="/auth/kakao" className="text-warning mt-3 d-block" style="text-decoration: underline; color: #ffc107;">
+             카카오 로그인 <img th:src="@{/images/kakao.png}" alt="Kakao Logo" style="height: 24px; margin-right: 8px;"></a>
+          </div>
+          <div class="d-flex mt-3">
+            <a href="" class="text-white" style="text-decoration: underline;">아이디/패스워찾기</a>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </section>
 </body>
+
 </html>
