--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -32,9 +32,9 @@
               </div>
             </div>
             <div class="form-group row" id="verificationCodeInputGroup" style="display: none;">
-              <label for="email-code" class="col-sm-3 col-form-label text-nowrap">인증코드:</label>
+              <label for="emailcode" class="col-sm-3 col-form-label text-nowrap">인증코드:</label>
               <div class="col-sm-6">
-                <input type="text" class="form-control" id="email-code" name="email-code">
+                <input type="text" class="form-control" id="emailcode" name="emailcode">
                 <div class="input-group-append">
                   <button class="btn btn-outline-secondary" type="button" id="checkCodeButton">입력하기</button>
                 </div>
@@ -90,10 +90,10 @@
               </div>
             </div>
             <div class="form-group row">
-              <label for="sample4_postcode" class="col-sm-3 col-form-label text-nowrap">주소 :</label>
+              <label for="postcode" class="col-sm-3 col-form-label text-nowrap">주소 :</label>
               <div class="col-sm-9">
                 <div class="input-group">
-                  <input type="text" class="form-control" id="sample4_postcode" placeholder="우편번호">
+                  <input type="text" class="form-control" id="postcode" name="postcode" placeholder="우편번호">
                   <div class="input-group-append">
                     <button class="btn btn-outline-secondary" type="button" onclick="sample4_execDaumPostcode()">우편번호 검색</button>
                   </div>
