feat: admin 페이지 나눔글 상세 뷰 구현

--- a/src/main/resources/templates/content/admin/board.html
+++ b/src/main/resources/templates/content/admin/board.html
@@ -41,7 +41,7 @@
                     <td th:text="1234.345">책 바코드</td>
                     <td th:text="2023.10.16">등록일자</td>
                     <td th:text="배달중">현재 상황</td>
-                    <td><a href="/board/detail/">자세히 보기</a></td>
+                    <td><a th:href="@{/admin/board/detail}">자세히 보기</a></td>
                 </tr>
                 </tbody>
             </table>
